# ra-infrastructure

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  DEPENDENTS.md  README.md  REPO-CONSOLIDATION-RESEARCH-2025-11-29.md  start-here.md
.claude/: settings.local.json
cli/: pyproject.toml
cli/src/inventory/: __init__.py  config.py  main.py
cli/src/inventory/commands/: __init__.py  db.py  device.py  network.py  org.py  site.py  zone.py
cli/src/inventory/db/: __init__.py  connection.py  repository.py
cli/src/inventory/db/repositories/: __init__.py  device.py  network.py  organization.py  site.py  zone.py
cli/src/inventory/models/: __init__.py  base.py  device.py  network.py  organization.py  site.py  zone.py
cli/tests/: __init__.py  conftest.py
cli/tests/test_commands/: __init__.py  test_db.py  test_device.py  test_network.py  test_org.py  test_site.py  test_zone.py
cli/tests/test_db/: test_repository.py
cli/tests/test_models/: test_device.py  test_network.py  test_organization.py  test_site.py  test_zone.py
config/: .gitkeep  monitoring.env.example  rclone.conf.example
docker/: .env.example  docker-compose.yml
docs/: API-DEVICE-USAGE-STATUS.md  DATABASE.md  DOCKER.md  DR-RUNBOOK.md  OPEN-ISSUES.md  QUICKSTART.md  RECOVERY-QUICKSTART.md  SCHEMA-CONTRACT.md
exports/: MANIFEST.md  device_attributes.csv  device_categories.csv  device_connections.csv  devices.csv  ip_allocations.csv  network_vlans.csv  networks.csv  organizations.csv  sites.csv  zones.csv
scripts/: backup.ps1  health-check.ps1  install-backup-tasks.ps1  install-health-check-task.ps1  install-startup-task.ps1  restore.ps1  startup.ps1  verify-startup.ps1
(+26 files in other folders)
